tunnelgame.html Put an explanation message as the alternative content of the flash game
Ignore-this: 7e3bf91e8f02a68456df7c78eec5825f

darcs-hash:20090623110505-78f38-156f697b23e90f161928877a30c56783ad240ee3.gz

--- a/tunnelgame.html
+++ b/tunnelgame.html
@@ -13,7 +13,12 @@
   <body>
 
     <div id="myContent">
-      <p>Alternative content</p>
+      <p>
+        <noscript>Javascript must be enabled to play this game.</noscript>
+        <script type="text/javascript">
+            document.write('Flash version 9.0.124 or higher must be installed to play this game. <a href="http://www.adobe.com/go/getflashplayer/">Get the latest Flash player</a>.');
+        </script>
+      </p>
     </div>
 
   </body>
